--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
-# see http://about.travis-ci.org/docs/user/languages/php/ for more hints
 language: php
+
 php:
-  # using major version aliases
-
-  # aliased to 5.2.17
-  - 5.2
-  # aliased to a recent 5.3.x version
   - 5.3
-  # aliased to a recent 5.4.x version
   - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
+  - hhvm
 
-script: phpunit tests
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+
+script:
+  - php vendor/bin/phpcs --standard=PSR2 docs/examples src tests
+  - php vendor/bin/phpunit tests
