--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
       "email": "gl@salesking.eu"
     }
   ],
-  "require": {},
+  "require": {
+    "php": ">=5.6"
+  },
   "require-dev": {
     "squizlabs/php_codesniffer": "2.*",
-    "phpunit/phpunit": "4.8.*"
+    "phpunit/phpunit": "5.3.*"
   },
   "autoload": {
     "psr-4": {
