--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     }
   ],
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "2.*",
