--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "2.*",
-    "phpunit/phpunit": "5.3.*",
-    "phpdocumentor/phpdocumentor": "2.*"
+    "phpunit/phpunit": "5.3.*"
   },
   "autoload": {
     "psr-4": {
